--- a/remcam/Makefile.in
+++ b/remcam/Makefile.in
@@ -22,9 +22,5 @@ clean:
 depend:
 	 @makedepend -- $(CFLAGS) -- $(SOURCES)
 
-install:
-	if [ ! -d @libdir@ ] ; then \
-                mkdir @libdir@; \
-                chmod 755 @libdir@; \
-        fi;
+install: $(libdir)
 	$(INSTALL) -m 755  @MAKESHLIBDIR@lib@REMCAMLIB@@SHARETYPE@ @libdir@
