--- a/gen_device/Makefile.in
+++ b/gen_device/Makefile.in
@@ -25,15 +25,11 @@ clean :
 	@ $(RM) @MAKELIBDIR@libGenDevShr.a 
 	@ $(RM) @MAKESHLIBDIR@libGenDevShr@SHARETYPE@ 
 
-install:
-	if [ ! -d @libdir@ ] ; then \
-                $(MKDIR_P) -m 755 @libdir@; \
-        fi;
+install: $(libdir)
 	$(INSTALL) -m 755  @MAKESHLIBDIR@libGenDevShr@SHARETYPE@ @libdir@
 	if (test @SHARETYPE@ != .a) then \
 		$(INSTALL) -m 644  @MAKELIBDIR@libGenDevShr.a @libdir@; \
 	fi;
-
 
 @MAKEBINDIR@gen_device : $(EXE_OBJECTS)
 	$(CC) -o $@ @CC_LDFLAGS@ $(CFLAGS) $(EXE_OBJECTS) $(EXE_LIBS)
@@ -50,14 +46,6 @@ lex.gen_device.c : gen_device.x
 @MAKELIBDIR@libGenDevShr.a : $(LIB_OBJECTS)
 	$(AR) -cr $@ $(LIB_OBJECTS)
 	@RANLIB@ $@
-
-@MAKEBINDIR@ :
-	mkdir @MAKEBINDIR@
-
-@MAKELIBDIR@ :
-	mkdir @MAKELIBDIR@
-
-@MAKESHLIBDIR_RULE@
 
 MdsShr.exports: MdsShr.def
 	sed -e /LIBRARY/\;/\;/d MdsShr.def > $@
