--- a/javamds/Makefile.in
+++ b/javamds/Makefile.in
@@ -18,15 +18,9 @@ clean:
 	@ $(RM) so_locations
 	@ $(RM) @MAKELIBDIR@libJavaMds@SHARETYPEJNI@
 
-install:
-	if [ ! -d @libdir@ ] ; then \
-                mkdir @libdir@; \
-                chmod 755 @libdir@; \
-        fi;
+install: $(libdir)
 	$(INSTALL) -m 755  @MAKELIBDIR@libJavaMds@SHARETYPEJNI@ @libdir@
 
 @MAKELIBDIR@libJavaMds@SHARETYPEJNI@ : $(OBJECTS) 
 	$(LD) -o $@ @LINKJNI@ $(OBJECTS) -L@MAKELIBDIR@ -lMdsShr -lMdsIpShr -lTreeShr -lTdiShr -lRtEventsShr -lpthread $(LIBS)
 
-@MAKELIBDIR@ :
-	mkdir @MAKELIBDIR@
