--- a/mdssql/Makefile.in
+++ b/mdssql/Makefile.in
@@ -22,11 +22,7 @@ clean:
 depend:
 	 @makedepend -- $(CFLAGS) -- $(SOURCES)
 
-install:
-	if [ ! -d @libdir@ ] ; then \
-                mkdir @libdir@; \
-                chmod 755 @libdir@; \
-        fi;
+install: $(libdir)
 	$(INSTALL) -m 644  @MAKELIBDIR@libMdsSql.a @libdir@
 	$(INSTALL) -m 755  @MAKELIBDIR@libMdsSql@SHARETYPE@ @libdir@
 
@@ -36,6 +32,3 @@ install:
 @MAKELIBDIR@libMdsSql.a : $(OBJECTS)
 	$(AR) -cr $@ $(OBJECTS)
 	$(RANLIB) $@
-
-@MAKELIBDIR@ :
-	mkdir @MAKELIBDIR@
