--- a/treeshr/Makefile.in
+++ b/treeshr/Makefile.in
@@ -55,11 +55,7 @@ endif
 depend:
 	 @makedepend -- $(CFLAGS) -- $(SOURCES)
 
-install:
-	if [ ! -d @libdir@ ] ; then \
-                mkdir @libdir@; \
-                chmod 755 @libdir@; \
-        fi;
+install: $(libdir)
 	$(INSTALL) -m 755  @MAKESHLIBDIR@@LIBPRE@TreeShr@SHARETYPE@ @libdir@
 ifdef IMPLIB
 	$(INSTALL) -m 755 $(IMPLIB) @libdir@
@@ -75,9 +71,6 @@ endif
 @MAKELIBDIR@@LIBPRE@TreeShr.a : $(OBJECTS)
 	$(AR) -cr $@ $(OBJECTS)
 	@RANLIB@ $@
-
-@MAKELIBDIR@ :
-	mkdir @MAKELIBDIR@
 
 TreeShr.exports: TreeShr.def
 	sed -e /LIBRARY/\;/\;/d TreeShr.def > $@
