Specify a default goal for all the makefiles

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -71,3 +71,5 @@ tooldir = $(exec_prefix)/$(target_alias)
 
 $(sort @MAKEBINDIR@ @MAKELIBDIR@ @MAKESHLIBDIR@ @MAKEUIDDIR@ @uiddir@ $(bindir) $(libdir) $(sysconfdir)):
 	$(MKDIR_P) $@
+
+.DEFAULT_GOAL := all
