Use only one directory making rule

--- a/Makefile.in
+++ b/Makefile.in
@@ -63,9 +63,7 @@ PARTS = \
 .PHONY: all $(PARTS)
 all: $(PARTS)
 
-DIRECTORIES = @MAKEBINDIR@ @MAKELIBDIR@ @MAKESHLIBDIR@ @MAKEUIDDIR@
-$(sort $(DIRECTORIES)):
-	mkdir -p $@
+DIRECTORIES = $(sort @MAKEBINDIR@ @MAKELIBDIR@ @MAKESHLIBDIR@ @MAKEUIDDIR@)
 
 $(PARTS): $(DIRECTORIES)
 	$(MAKE) -C $@
