--- a/mitdevices/Makefile.in
+++ b/mitdevices/Makefile.in
@@ -275,92 +275,10 @@ install: $(bindir) $(libdir)
 MitDevices.exports: MitDevices.def
 	$(SED) -e /LIBRARY/\;/\;/d io.def > $@
 
-@MAKEUIDDIR@A12.uid : A12.uil ; $(UIL) -o @MAKEUIDDIR@A12.uid A12.uil
-@MAKEUIDDIR@A14.uid : A14.uil ; $(UIL) -o @MAKEUIDDIR@A14.uid A14.uil
-@MAKEUIDDIR@A3204.uid : A3204.uil ; $(UIL) -o @MAKEUIDDIR@A3204.uid A3204.uil
-@MAKEUIDDIR@B2408.uid : B2408.uil ; $(UIL) -o @MAKEUIDDIR@B2408.uid B2408.uil
-@MAKEUIDDIR@B3224.uid : B3224.uil ; $(UIL) -o @MAKEUIDDIR@B3224.uid B3224.uil
-@MAKEUIDDIR@B5910A.uid : B5910A.uil ; $(UIL) -o @MAKEUIDDIR@B5910A.uid B5910A.uil
-@MAKEUIDDIR@CHS_A14.uid : CHS_A14.uil ; $(UIL) -o @MAKEUIDDIR@CHS_A14.uid CHS_A14.uil
-@MAKEUIDDIR@DC1394.uid : DC1394.uil ; $(UIL) -o @MAKEUIDDIR@DC1394.uid DC1394.uil
-@MAKEUIDDIR@DC1394A.uid : DC1394A.uil ; $(UIL) -o @MAKEUIDDIR@DC1394A.uid DC1394A.uil
-@MAKEUIDDIR@DT101.uid : DT101.uil ; $(UIL) -o @MAKEUIDDIR@DT101.uid DT101.uil
-@MAKEUIDDIR@DT196.uid : DT196.uil ; $(UIL) -o @MAKEUIDDIR@DT196.uid DT196.uil
-@MAKEUIDDIR@DT196A.uid : DT196A.uil ; $(UIL) -o @MAKEUIDDIR@DT196A.uid DT196A.uil
-@MAKEUIDDIR@DT200.uid : DT200.uil ; $(UIL) -o @MAKEUIDDIR@DT200.uid DT200.uil
-@MAKEUIDDIR@DT200DA.uid : DT200DA.uil ; $(UIL) -o @MAKEUIDDIR@DT200DA.uid DT200DA.uil
-@MAKEUIDDIR@DT216.uid : DT216.uil ; $(UIL) -o @MAKEUIDDIR@DT216.uid DT216.uil
-@MAKEUIDDIR@DT216A.uid : DT216A.uil ; $(UIL) -o @MAKEUIDDIR@DT216A.uid DT216A.uil
-@MAKEUIDDIR@DT_ACQ16.uid : DT_ACQ16.uil ; $(UIL) -o @MAKEUIDDIR@DT_ACQ16.uid DT_ACQ16.uil
-@MAKEUIDDIR@DSP2904.uid : DSP2904.uil ; $(UIL) -o @MAKEUIDDIR@DSP2904.uid DSP2904.uil
-@MAKEUIDDIR@EC727.uid : EC727.uil ; $(UIL) -o @MAKEUIDDIR@EC727.uid EC727.uil
-@MAKEUIDDIR@FERA.uid : FERA.uil ; $(UIL) -o @MAKEUIDDIR@FERA.uid FERA.uil
-@MAKEUIDDIR@H908.uid : H908.uil ; $(UIL) -o @MAKEUIDDIR@H908.uid H908.uil
-@MAKEUIDDIR@H911.uid : H911.uil ; $(UIL) -o @MAKEUIDDIR@H911.uid H911.uil
-@MAKEUIDDIR@H912.uid : H912.uil ; $(UIL) -o @MAKEUIDDIR@H912.uid H912.uil
-@MAKEUIDDIR@HM650.uid : HM650.uil ; $(UIL) -o @MAKEUIDDIR@HM650.uid HM650.uil
-@MAKEUIDDIR@HV1440.uid : HV1440.uil ; $(UIL) -o @MAKEUIDDIR@HV1440.uid HV1440.uil
-@MAKEUIDDIR@HV1443.uid : HV1443.uil ; $(UIL) -o @MAKEUIDDIR@HV1443.uid HV1443.uil
-@MAKEUIDDIR@HV4032.uid : HV4032.uil ; $(UIL) -o @MAKEUIDDIR@HV4032.uid HV4032.uil
-@MAKEUIDDIR@HV4032A1.uid : HV4032A1.uil ; $(UIL) -o @MAKEUIDDIR@HV4032A1.uid HV4032A1.uil
-@MAKEUIDDIR@IDL.uid : IDL.uil ; $(UIL) -o @MAKEUIDDIR@IDL.uid IDL.uil
-@MAKEUIDDIR@INCAA16.uid : INCAA16.uil ; $(UIL) -o @MAKEUIDDIR@INCAA16.uid INCAA16.uil
-@MAKEUIDDIR@INCAA4.uid : INCAA4.uil ; $(UIL) -o @MAKEUIDDIR@INCAA4.uid INCAA4.uil
-@MAKEUIDDIR@INCAA6.uid : INCAA6.uil ; $(UIL) -o @MAKEUIDDIR@INCAA6.uid INCAA6.uil
-@MAKEUIDDIR@INCAA_TR10.uid : INCAA_TR10.uil ; $(UIL) -o @MAKEUIDDIR@INCAA_TR10.uid INCAA_TR10.uil
-@MAKEUIDDIR@J1819.uid : J1819.uil ; $(UIL) -o @MAKEUIDDIR@J1819.uid J1819.uil
-@MAKEUIDDIR@J221.uid : J221.uil ; $(UIL) -o @MAKEUIDDIR@J221.uid J221.uil
-@MAKEUIDDIR@J412.uid : J412.uil ; $(UIL) -o @MAKEUIDDIR@J412.uid J412.uil
-@MAKEUIDDIR@JOERGER_ADCP.uid : JOERGER_ADCP.uil ; $(UIL) -o @MAKEUIDDIR@JOERGER_ADCP.uid JOERGER_ADCP.uil
-@MAKEUIDDIR@JOERGER_CG.uid : JOERGER_CG.uil ; $(UIL) -o @MAKEUIDDIR@JOERGER_CG.uid JOERGER_CG.uil
-@MAKEUIDDIR@JOERGER_DAC16.uid : JOERGER_DAC16.uil ; $(UIL) -o @MAKEUIDDIR@JOERGER_DAC16.uid JOERGER_DAC16.uil
-@MAKEUIDDIR@JOERGER_TR16.uid : JOERGER_TR16.uil ; $(UIL) -o @MAKEUIDDIR@JOERGER_TR16.uid JOERGER_TR16.uil
-@MAKEUIDDIR@JOERGER_TR612.uid : JOERGER_TR612.uil ; $(UIL) -o @MAKEUIDDIR@JOERGER_TR612.uid JOERGER_TR612.uil
-@MAKEUIDDIR@JOERGER_TR812.uid : JOERGER_TR812.uil ; $(UIL) -o @MAKEUIDDIR@JOERGER_TR812.uid JOERGER_TR812.uil
-@MAKEUIDDIR@JRG_TR1612.uid : JRG_TR1612.uil ; $(UIL) -o @MAKEUIDDIR@JRG_TR1612.uid JRG_TR1612.uil
-@MAKEUIDDIR@L2232.uid : L2232.uil ; $(UIL) -o @MAKEUIDDIR@L2232.uid L2232.uil
-@MAKEUIDDIR@L2256.uid : L2256.uil ; $(UIL) -o @MAKEUIDDIR@L2256.uid L2256.uil
-@MAKEUIDDIR@L2415.uid : L2415.uil ; $(UIL) -o @MAKEUIDDIR@L2415.uid L2415.uil
-@MAKEUIDDIR@L3512.uid : L3512.uil ; $(UIL) -o @MAKEUIDDIR@L3512.uid L3512.uil
-@MAKEUIDDIR@L4202.uid : L4202.uil ; $(UIL) -o @MAKEUIDDIR@L4202.uid L4202.uil
-@MAKEUIDDIR@L6810.uid : L6810.uil ; $(UIL) -o @MAKEUIDDIR@L6810.uid L6810.uil
-@MAKEUIDDIR@L6810A.uid : L6810A.uil ; $(UIL) -o @MAKEUIDDIR@L6810A.uid L6810A.uil
-@MAKEUIDDIR@L6810B.uid : L6810B.uil ; $(UIL) -o @MAKEUIDDIR@L6810B.uid L6810B.uil
-@MAKEUIDDIR@L8100.uid : L8100.uil ; $(UIL) -o @MAKEUIDDIR@L8100.uid L8100.uil
-@MAKEUIDDIR@L8201.uid : L8201.uil ; $(UIL) -o @MAKEUIDDIR@L8201.uid L8201.uil
-@MAKEUIDDIR@L8206.uid : L8206.uil ; $(UIL) -o @MAKEUIDDIR@L8206.uid L8206.uil
-@MAKEUIDDIR@L8210.uid : L8210.uil ; $(UIL) -o @MAKEUIDDIR@L8210.uid L8210.uil
-@MAKEUIDDIR@L8210_HEADERS.uid : L8210_HEADERS.uil ; $(UIL) -o @MAKEUIDDIR@L8210_HEADERS.uid L8210_HEADERS.uil
-@MAKEUIDDIR@L8212.uid : L8212.uil ; $(UIL) -o @MAKEUIDDIR@L8212.uid L8212.uil
-@MAKEUIDDIR@L8212_HEADERS.uid : L8212_HEADERS.uil ; $(UIL) -o @MAKEUIDDIR@L8212_HEADERS.uid L8212_HEADERS.uil
-@MAKEUIDDIR@L8501.uid : L8501.uil ; $(UIL) -o @MAKEUIDDIR@L8501.uid L8501.uil
-@MAKEUIDDIR@L8590.uid : L8590.uil ; $(UIL) -o @MAKEUIDDIR@L8590.uid L8590.uil
-@MAKEUIDDIR@L8590_MEM.uid : L8590_MEM.uil ; $(UIL) -o @MAKEUIDDIR@L8590_MEM.uid L8590_MEM.uil
-@MAKEUIDDIR@L8590_SCLR.uid : L8590_SCLR.uil ; $(UIL) -o @MAKEUIDDIR@L8590_SCLR.uid L8590_SCLR.uil
-@MAKEUIDDIR@L8818.uid : L8818.uil ; $(UIL) -o @MAKEUIDDIR@L8818.uid L8818.uil
-@MAKEUIDDIR@L8828.uid : L8828.uil ; $(UIL) -o @MAKEUIDDIR@L8828.uid L8828.uil
-@MAKEUIDDIR@MDSDCL.uid : MDSDCL.uil ; $(UIL) -o @MAKEUIDDIR@MDSDCL.uid MDSDCL.uil
-@MAKEUIDDIR@MIT_CLOCK.uid : MIT_CLOCK.uil ; $(UIL) -o @MAKEUIDDIR@MIT_CLOCK.uid MIT_CLOCK.uil
-@MAKEUIDDIR@MIT_DCLOCK.uid : MIT_DCLOCK.uil ; $(UIL) -o @MAKEUIDDIR@MIT_DCLOCK.uid MIT_DCLOCK.uil
-@MAKEUIDDIR@MIT_DECODER.uid : MIT_DECODER.uil ; $(UIL) -o @MAKEUIDDIR@MIT_DECODER.uid MIT_DECODER.uil
-@MAKEUIDDIR@MIT_ENCODER.uid : MIT_ENCODER.uil ; $(UIL) -o @MAKEUIDDIR@MIT_ENCODER.uid MIT_ENCODER.uil
-@MAKEUIDDIR@MIT_GATE.uid : MIT_GATE.uil ; $(UIL) -o @MAKEUIDDIR@MIT_GATE.uid MIT_GATE.uil
-@MAKEUIDDIR@MIT_PULSE.uid : MIT_PULSE.uil ; $(UIL) -o @MAKEUIDDIR@MIT_PULSE.uid MIT_PULSE.uil
-@MAKEUIDDIR@MIT__CLOCK.uid : MIT__CLOCK.uil ; $(UIL) -o @MAKEUIDDIR@MIT__CLOCK.uid MIT__CLOCK.uil
-@MAKEUIDDIR@MIT__DCLOCK.uid : MIT__DCLOCK.uil ; $(UIL) -o @MAKEUIDDIR@MIT__DCLOCK.uid MIT__DCLOCK.uil
-@MAKEUIDDIR@MIT__GATE.uid : MIT__GATE.uil ; $(UIL) -o @MAKEUIDDIR@MIT__GATE.uid MIT__GATE.uil
-@MAKEUIDDIR@MPB__DECODER.uid : MPB__DECODER.uil ; $(UIL) -o @MAKEUIDDIR@MPB__DECODER.uid MPB__DECODER.uil
-@MAKEUIDDIR@PARAGON_HIST.uid : PARAGON_HIST.uil ; $(UIL) -o @MAKEUIDDIR@PARAGON_HIST.uid PARAGON_HIST.uil
-@MAKEUIDDIR@PARAGON_RPT.uid : PARAGON_RPT.uil ; $(UIL) -o @MAKEUIDDIR@PARAGON_RPT.uid PARAGON_RPT.uil
-@MAKEUIDDIR@PREAMP.uid : PREAMP.uil ; $(UIL) -o @MAKEUIDDIR@PREAMP.uid PREAMP.uil
-@MAKEUIDDIR@RETICON120.uid : RETICON120.uil ; $(UIL) -o @MAKEUIDDIR@RETICON120.uid RETICON120.uil
-@MAKEUIDDIR@T4012.uid : T4012.uil ; $(UIL) -o @MAKEUIDDIR@T4012.uid T4012.uil
-@MAKEUIDDIR@UMCCD.uid : UMCCD.uil ; $(UIL) -o @MAKEUIDDIR@UMCCD.uid UMCCD.uil
-@MAKEUIDDIR@U_OF_M_SPECT.uid : U_OF_M_SPECT.uil ; $(UIL) -o @MAKEUIDDIR@U_OF_M_SPECT.uid U_OF_M_SPECT.uil
+@MAKEUIDDIR@%.uid: %.uil
+	$(UIL) -o $@ $<
 
-#
 # This build must be done on a glibc 2.2.2 system (RedHat 7.x) or idl will have undefined references
-#
 @MAKESHLIBDIR@libIdl.so : callidl.c
 	cc -o @MAKESHLIBDIR@libIdl.so callidl.c -shared \
                -I/usr/local/itt/idl/external \
@@ -373,7 +291,6 @@ MitDevices.exports: MitDevices.def
 @DC1394_SUPPORT@ : dc1394_support.o
 	$(LD) -o $@ @LINKSHARED@  dc1394_support.o $(LIBDC1394_LIBS) $(LIBS) $(LDFLAGS)
 
-
 dc1394_support.o : dc1394_support.c
 	$(CC) -c -o $@ $(CFLAGS) $< $(LIBDC1394_INCS)
 
@@ -384,11 +301,9 @@ dc1394_support.o : dc1394_support.c
 dc1394_support2.o : dc1394_support2.c
 	$(CC) -c -o $@ $(CFLAGS) $< $(LIBDC1394_INCS)
 
-
 @MAKESHLIBDIR@acq_root_filesystem.tgz : $(DTACQ_FILESYSTEM)
 	echo $(DC) > acq_root_filesystem/ffs/user/MitFilesDate  
 	( cd acq_root_filesystem;  tar  --exclude=ffs -cvzf $@  . ; tar -cvzf $@_ffs ffs/user )
-
 
 @MAKESHLIBDIR@acq_root_filesystem.tgz_ffs : $(DTACQ_FILESYSTEM)
 	echo $(DC) > acq_root_filesystem/ffs/user/MitFilesDate
