Use -pthread, not -lpthread

--- a/javamds/Makefile.in
+++ b/javamds/Makefile.in
@@ -20,5 +20,5 @@ install: $(libdir)
 	$(INSTALL) -m 755  @MAKELIBDIR@libJavaMds@SHARETYPEJNI@ @libdir@
 
 @MAKELIBDIR@libJavaMds@SHARETYPEJNI@ : $(OBJECTS) 
-	$(LD) -o $@ @LINKJNI@ $(OBJECTS) -L@MAKELIBDIR@ -lMdsShr -lMdsIpShr -lTreeShr -lTdiShr -lRtEventsShr -lpthread $(LIBS)
+	$(LD) -o $@ @LINKJNI@ $(THREAD) $(OBJECTS) -L@MAKELIBDIR@ -lMdsShr -lMdsIpShr -lTreeShr -lTdiShr -lRtEventsShr $(LIBS)
 
