--- a/javamds/Makefile.in
+++ b/javamds/Makefile.in
@@ -1,6 +1,6 @@
 include @top_srcdir@/Makefile.inc
 
-CFLAGS=@CFLAGS@ @JDK_CFLAGS@
+CFLAGS += $(THREAD) @JDK_CFLAGS@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = javamds.c ServerSupport.c JavaData.c JavaTrav.c mdsobjects.c
