--- a/configure.in
+++ b/configure.in
@@ -670,7 +670,7 @@ fi
 
 dnl Checks for libraries.
 
-AC_CHECK_LIB(m,pow,LIBM="-lm",LIBM="")
+AC_CHECK_LIB([m], [pow], [LIBM="-lm"], [LIBM=""])
 AC_CHECK_LIB(resolv,__dn_skipname,LIBRESOLV="-lresolv",LIBRESOLV="")
 AC_CHECK_LIB(dl,dlopen,LIBDL="-ldl",LIBDL="")
 AC_CHECK_LIB(dld,shl_load,LIBDLD="-ldld",LIBDLD="")
